# tiktok-lives

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
apps/app-backoffice/: astro.config.mjs  package-lock.json  package.json
apps/app-backoffice/src/components/: ClipsTable.astro  Icon.astro  LocalTime.astro  Logo.astro  PlayButton.astro  Sidebar.astro  StatsCards.astro  ThemeToggle.astro  TopicHeatmap.astro  (+2 more)
apps/backend/: pyproject.toml
apps/backend/src/: main.py
apps/backend/src/api/routers/: clips.py  sessions.py
apps/backend/src/api/schemas/: clips.py
apps/backend/src/db/: connection.py
apps/cli/: pyproject.toml
apps/cli/src/: analyze_chat.py  analyze_topics.py  chat_topics.py  consolidate_sessions.py  export_animation.py  find_clips.py  generate_topic_embeddings.py  index_chat.py  index_session.py  migrate_battles.py  pipeline_telemetry.py  process_sessions.py  summarize_sessions.py  transcribe.py  transcribe_groq.py  transcription_dispatcher.py
apps/recorder/: pyproject.toml  run_watchdog.bat  run_watchdog.vbs  watchlist.json
apps/recorder/src/: backfill_nicknames.py  battle_spy.py  battles.py  chat_spy.py  init_battles_db.py  install_task.py  lockfile.py  monitor.py  profile_checker.py  record_tiktok_live.py  recording.py  treasure_spy.py  ventanilla_spy.py  watchdog.py
libs/: db.py
migrations/: 001_initial_schema.sql
openspec/specs/battle-detail/: spec.md
openspec/specs/chat-capture/: spec.md
openspec/specs/local-dates/: spec.md
openspec/specs/pg-data-access/: spec.md
openspec/specs/status-update-line/: spec.md
(+49 files in other folders)
